Fix Ensure text remains visible during webfont load

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -4,6 +4,7 @@
 @font-face {
   font-family: "Brice";
   src: url("/fonts/Bricemont.ttf");
+  font-display: swap;
 }
 @font-face {
   font-family: "Dakdo";
